build/log/idf_py_stdout_output_69868
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/esp-idf/esptool_py && /home/afzal-khan/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/afzal-khan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x10000 bootloader 0x0 /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/bootloader/bootloader.bin
Bootloader binary size 0x55f0 bytes. 0xaa10 bytes (66%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj 
/home/afzal-khan/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/build/config -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main -I/home/afzal-khan/esp/esp-idf/components/newlib/platform_include -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/afzal-khan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/freertos/esp_additions/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/afzal-khan/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/afzal-khan/esp/esp-idf/components/heap/include -I/home/afzal-khan/esp/esp-idf/components/log/include -I/home/afzal-khan/esp/esp-idf/components/soc/include -I/home/afzal-khan/esp/esp-idf/components/soc/esp32s3/. -I/home/afzal-khan/esp/esp-idf/components/soc/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/hal/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/hal/include -I/home/afzal-khan/esp/esp-idf/components/hal/platform_port/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include -I/home/afzal-khan/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_rom/esp32s3 -I/home/afzal-khan/esp/esp-idf/components/esp_common/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/include -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/soc -I/home/afzal-khan/esp/esp-idf/components/esp_system/port/include/private -I/home/afzal-khan/esp/esp-idf/components/xtensa/include -I/home/afzal-khan/esp/esp-idf/components/xtensa/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps -I/home/afzal-khan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/afzal-khan/esp/esp-idf/components/lwip/lwip/src/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include -I/home/afzal-khan/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/afzal-khan/esp/esp-idf/components/esp_http_server/include -I/home/afzal-khan/esp/esp-idf/components/esp_event/include -I/home/afzal-khan/esp/esp-idf/components/http_parser -I/home/afzal-khan/esp/esp-idf/components/esp-tls -I/home/afzal-khan/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/afzal-khan/esp/esp-idf/components/mbedtls/port/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/afzal-khan/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/afzal-khan/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/afzal-khan/esp/esp-idf/components/esp_wifi/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/include -I/home/afzal-khan/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/esp_netif/include -I/home/afzal-khan/esp/esp-idf/components/esp_timer/include -I/home/afzal-khan/esp/esp-idf/components/spi_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_psram/include -I/home/afzal-khan/esp/esp-idf/components/driver/include -I/home/afzal-khan/esp/esp-idf/components/driver/deprecated -I/home/afzal-khan/esp/esp-idf/components/driver/esp32s3/include -I/home/afzal-khan/esp/esp-idf/components/esp_pm/include -I/home/afzal-khan/esp/esp-idf/components/esp_ringbuf/include -I/home/afzal-khan/esp/esp-idf/components/nvs_flash/include -I/home/afzal-khan/esp/esp-idf/components/esp_partition/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/driver/include -I/home/afzal-khan/esp/esp-idf/components/esp32-camera/conversions/include -I/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/managed_components/espressif__mdns/include -I/home/afzal-khan/esp/esp-idf/components/console -I/home/afzal-khan/esp/esp-idf/components/vfs/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton=. -fmacro-prefix-map=/home/afzal-khan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/tcp_server.c.obj -c /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c: In function 'send_video_data':
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:261:13: error: implicit declaration of function 'memeset'; did you mean 'memset'? [-Werror=implicit-function-declaration]
  261 |             memeset(rx_buffer, 0, sizeof(rx_buffer));
      |             ^~~~~~~
      |             memset
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:247:12: warning: unused variable 'part_buf' [-Wunused-variable]
  247 |     char * part_buf[64];
      |            ^~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c: In function 'tcp_server_task':
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:409:83: warning: passing argument 3 of 'accept' from incompatible pointer type [-Wincompatible-pointer-types]
  409 |                 client_socket = accept(socket_id, (struct sockaddr *)&sourceAddr, &addrLen);
      |                                                                                   ^~~~~~~~
      |                                                                                   |
      |                                                                                   uint * {aka unsigned int *}
In file included from /home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:38:
/home/afzal-khan/esp/esp-idf/components/lwip/include/lwip/sockets.h:15:65: note: expected 'socklen_t *' {aka 'long unsigned int *'} but argument is of type 'uint *' {aka 'unsigned int *'}
   15 | static inline int accept(int s,struct sockaddr *addr,socklen_t *addrlen)
      |                                                      ~~~~~~~~~~~^~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:365:9: warning: unused variable 'bytes_received' [-Wunused-variable]
  365 |     int bytes_received;         // immediate bytes received
      |         ^~~~~~~~~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:363:10: warning: unused variable 'tx_buff' [-Wunused-variable]
  363 |     char tx_buff[] = "hello from server" ;
      |          ^~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:362:10: warning: unused variable 'rx_buffer' [-Wunused-variable]
  362 |     char rx_buffer[32]; // char array to store received data
      |          ^~~~~~~~~
At top level:
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:69:20: warning: 'TAG_AP' defined but not used [-Wunused-variable]
   69 | static const char *TAG_AP = "wifi softAP";
      |                    ^~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:68:20: warning: 'TAG_STA' defined but not used [-Wunused-variable]
   68 | static const char *TAG_STA = "wifi station";
      |                    ^~~~~~~
/home/afzal-khan/esp/projects/mCamera-esp32/mProject/esp-camera-teton/main/tcp_server.c:64:27: warning: 'wifi_event_group' defined but not used [-Wunused-variable]
   64 | static EventGroupHandle_t wifi_event_group;
      |                           ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
